# Diabas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  format
mods/bard/: mod.toml
mods/bard/project/: Library.fs  bard.fsproj
mods/core/: main.js  mod.toml  util.js
mods/farming/: main.js  mod.toml
mods/farming/project/: farming.cs  farming.csproj
mods/farming/res/: crate.tga  purple_flower.tga
mods/test/: main.js  mod.toml
res/: demo.js
res/shaders/: debug_draw.fs.glsl  debug_draw.vs.glsl  sprite_batch_fs.glsl  sprite_batch_vs.glsl
source/: Diabas - genväg.lnk  game.cpp  game.hpp  main.cpp
source/app/: app.cpp  app.hpp  graphics.cpp  graphics.hpp  key.hpp  mouse.hpp
source/app/client/: app_client.cpp  app_client.hpp
source/app/d3d11/: graphics_d3d11.cpp  graphics_d3d11.hpp
source/app/graphics/: graphics.cpp  graphics.hpp
source/app/imgui/: imgui_impl_glfw_gl3.h
source/app/ogl/: graphics_ogl.cpp  graphics_ogl.hpp
source/app/server/: app_server.cpp  app_server.hpp
source/audio/: audio.cpp  audio.hpp  audio_manager.cpp  audio_manager.hpp
source/core/: assert.hpp  common.hpp  fixed_time_update.hpp  hash.cpp  hash.hpp  macros.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp  types.hpp  uuid.hpp  value_store.cpp  value_store.hpp
source/core/platform/: platform.hpp
source/game/: constants.hpp  game.cpp  game.hpp  player_data_storage.hpp  resource.cpp  resource.hpp  terrain.cpp  terrain.hpp  world.cpp  world.hpp  world_pos.hpp
source/game/chat/: .#chat.cpp  chat.cpp  chat.hpp  chat_message.cpp  chat_message.hpp
source/game/client/: client_cache.cpp  client_cache.hpp  debug_ui.cpp  debug_ui.hpp  entity_render.cpp  entity_render.hpp  game_client.cpp  game_client.hpp  player.cpp  player.hpp  player_data_storage.hpp  render_component.hpp  tile_atlas.cpp  tile_atlas.hpp  world_renderer.cpp  world_renderer.hpp
source/game/ecs/: entity_manager.cpp  entity_manager.hpp
source/game/ecs/components/: item_data_component.hpp  npc_data_component.hpp  player_connection_component.cpp  player_connection_component.hpp  player_data_component.hpp  projectile_data_component.hpp  tile_data_component.hpp  uuid_component.hpp
source/game/ecs/systems/: destroy_system.hpp  generic_system.hpp  npc_system.cpp  npc_system.hpp  player_connection_system.hpp  player_create_system.hpp  player_system.cpp  player_system.hpp
source/game/entity/: entity.hpp
source/game/gameplay/: core_content.cpp  core_content.hpp  moveable.cpp  moveable.hpp  player.cpp  player.hpp  soul.cpp  soul.hpp
source/game/gameplay/npc/: npc_blue_blob.cpp  npc_blue_blob.hpp  npc_rabbit.cpp  npc_rabbit.hpp  npc_slime.cpp  npc_slime.hpp
source/game/gameplay/tile/: tile_chair.cpp  tile_chair.hpp  tile_spikes.cpp  tile_spikes.hpp  tile_variant.cpp  tile_variant.hpp
source/game/item/: item.cpp  item.hpp  item_registry.cpp  item_registry.hpp  item_stack.cpp  item_stack.hpp  tool.hpp
source/game/misc/: game_input.hpp
source/game/mod/: mod.cpp  mod.hpp  mod_loader.cpp  mod_loader.hpp  mono_context.cpp  mono_context.hpp
source/game/mods/: loader.cpp  loader.hpp  mod.cpp  mod.hpp  result.cpp  result.hpp
source/game/mods/script/: expose_item.cpp  expose_item.hpp  expose_mod.cpp  expose_mod.hpp  expose_tile.cpp  expose_tile.hpp  expose_world.cpp  expose_world.hpp  mod_base.cpp  mod_base.hpp  mod_script.cpp  mod_script.hpp  script_tile.cpp  script_tile.hpp
source/game/npc/: npc.cpp  npc.hpp  npc_id.cpp  npc_id.hpp  npc_registry.cpp  npc_registry.hpp  npc_spawn.cpp  npc_spawn.hpp
source/game/npc/brain/: brain_follow.cpp  brain_follow.hpp  brain_pathfind.cpp  brain_pathfind.hpp  brain_simple.cpp  brain_simple.hpp
source/game/physics/: collideable.hpp  collision.cpp  collision.hpp  moveable.cpp  moveable.hpp  path_finding.cpp  path_finding.hpp  units.cpp  units.hpp
source/game/server/: cli_input.cpp  cli_input.hpp  game_server.cpp  game_server.hpp
source/game/tile/: tile.cpp  tile.hpp  tile_entity.cpp  tile_entity.hpp  tile_manager.cpp  tile_manager.hpp  tile_pattern.cpp  tile_pattern.hpp  tile_registry.cpp  tile_registry.hpp
source/game/wall/: wall.cpp  wall.hpp  wall_registry.cpp  wall_registry.hpp
source/graphics/: camera.cpp  camera.hpp  color.hpp  debug_draw.cpp  debug_draw.hpp  index_buffer.cpp  index_buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  sprite_batch.cpp  sprite_batch.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp
source/math/: math.hpp
source/mods/: loader.cpp  loader.hpp  mod.cpp  mod.hpp  mod_info.cpp  mod_info.hpp  result.cpp  result.hpp
source/mods/script/: mod_base.cpp  mod_base.hpp  mod_script.cpp  mod_script.hpp
source/network/: client.cpp  client.hpp  common.cpp  common.hpp  connection_id.cpp  connection_id.hpp  connection_state.hpp  network.cpp  network.hpp  packet.cpp  packet.hpp  packet_handler.cpp  packet_handler.hpp  packet_header.hpp  server.cpp  server.hpp  side.cpp  side.hpp
source/script/: env.cpp  env.hpp  environment.cpp  environment.hpp  module.cpp  module.hpp  result.hpp  script.cpp  script.hpp  util.cpp  util.hpp
source/script/expose/: expose_base.cpp  expose_base.hpp  expose_graphics.cpp  expose_graphics.hpp  expose_mod.cpp  expose_mod.hpp  expose_network.cpp  expose_network.hpp
source/server/: input.cpp  input.hpp  main.server.cpp
tests/: main.test.cpp  main.test.hpp  mods.test.cpp  packet.test.cpp  packet_handler.test.cpp  toml.test.cpp
tests/res/mods/test/: ayy.toml  mod.toml
